# diploma

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  adapt.py  analyze.py  health.py  history.py  styles.py
app/core/: config.py  database.py  logging.py
app/models/: db.py  schemas.py
